feat: add liability management crud
